Fix: Specific Domains not visible when Collection is hidden Drag playlists to current playlist
Add:
Tear-off dropdown menus

git-svn-id: http://svn.code.sf.net/p/rompr/code/trunk@519 94fc339e-1912-44e7-90be-6e134bb66470

--- a/skins/desktop/skin.css
+++ b/skins/desktop/skin.css
@@ -394,6 +394,11 @@ div.rightmenu.normalmenu
     font-size:6pt;
 }
 
+.dragmenu
+{
+    cursor:move;
+}
+
 #playbackTime
 {
     font-weight:bold;
